implement multilingual by using description in enum, not from db. Implemnt file upload